# sharing_midi_in_real_time

./: .gitignore  CMakeLists.txt  README.md  run.sh
main/: CMakeLists.txt  ap.c  ap.h  http_client.c  http_client.h  idf_component.yml  main.c  midi.c  midi.h  sta.c  sta.h  store.c  store.h
